[package]
name = "axum-resttest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
